2012-03-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls:      [Bug 3508771] load tclreg.dll in cygwin tclsh
	* generic/tclIntPlatDecls.h: Implement TclWinConvertError, TclWinConvertWSAError,
	* generic/tclStubInit.c:     and various more win32-specific internal functions for 
	* unix/Makefile.in:          Cygwin, so win32 extensions using those can be
	* unix/tcl.m4:               loaded in the cygwin version of tclsh.
	* unix/configure:
	* win/tclWinError.c:

2012-03-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:             [Bug 3288345] Wrong Tcl_StatBuf used on Cygwin
	* unix/tclUnixFile.c
	* unix/tclUnixPort.h
	* win/tclWinFile.c           Remove cygwin stuff no longer needed
	* win/tclWinPort.h

	* generic/tcl.decls:         [Bug 3508771] load tclreg.dll in cygwin tclsh
	* generic/tclInt.decls:      Implement TclWinGetPlatformId, Tcl_WinUtfToTChar,
	* generic/tclIntPlatDecls.h: Tcl_WinTCharToUtf (and a dummy TclWinCPUID) for 
	* generic/tclPlatDecls.h:    Cygwin, so win32 extensions using those can be
	* generic/tclStubInit.c:     loaded in the cygwin version of tclsh.
	* unix/tclUnixCompat.c:

2012-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c: [Bug 3388350] mingw64 compiler warnings

2012-03-07  Andreas Kupries  <andreask@activestate.com>

	* library/http/http.tcl: [Bug 3498327]: Generate upper-case
	* library/http/pkgIndex.tcl: hexadecimal output for compliance
	* tests/http.test: with RFC 3986. Bumped version to 2.5.7.

2012-03-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinPort.h: Compatibility with older Visual Studio versions.

2012-03-04  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
	* unix/tclUnixChan.c: TclUnixWaitForFile(): use FD_* macros
	* macosx/tclMacOSXNotify.c: to manipulate select masks (Cassoff).
	[Bug  3486554].  Backport  of  das' checkin  [e496f9ef50].  Allows
	Tcl8.4 to have sane fileevents on x86_64 at last.

2012-03-04  Jan Nijtmans  <nijtmans@users.sf.net>
