@@ -1,3 +1,8 @@
+2012-03-27  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.h:             [Bug 3508771] Wrong Tcl_StatBuf used on MinGW
+	* generic/tclFCmd.c:         [Bug 2015723] duplicate inodes from file stat on windows
+
 2012-03-24  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclInt.decls:      [Bug 3508771] load tclreg.dll in cygwin tclsh
